--- a/package.json
+++ b/package.json
@@ -11,24 +11,25 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-static": "^1.0.0-next.13",
 		"@sveltejs/kit": "next",
-		"@typescript-eslint/eslint-plugin": "^4.19.0",
-		"@typescript-eslint/parser": "^4.19.0",
-		"eslint": "^7.22.0",
-		"eslint-config-prettier": "^8.1.0",
+		"@typescript-eslint/eslint-plugin": "^4.27.0",
+		"@typescript-eslint/parser": "^4.27.0",
+		"autoprefixer": "^10.2.6",
+		"cssnano": "^5.0.6",
+		"eslint": "^7.29.0",
+		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.0",
+		"postcss": "^8.3.5",
+		"postcss-load-config": "^3.1.0",
 		"prettier": "~2.2.1",
-		"prettier-plugin-svelte": "^2.2.0",
-		"svelte": "^3.34.0",
-		"svelte-check": "^2.0.0",
+		"prettier-plugin-svelte": "^2.3.1",
+		"svelte": "^3.38.2",
+		"svelte-check": "^2.2.0",
 		"svelte-preprocess": "^4.7.3",
-		"tslib": "^2.0.0",
-		"typescript": "^4.0.0",
-		"postcss": "^8.2.13",
-		"postcss-load-config": "^3.0.1",
-		"autoprefixer": "^10.2.5",
-		"cssnano": "^5.0.2",
-		"tailwindcss": "^2.1.2"
+		"tailwindcss": "^2.2.2",
+		"tslib": "^2.3.0",
+		"typescript": "^4.3.4"
 	},
 	"type": "module"
 }
